test/negative/301_unbound_var.fx
// expect: not found
val y = x + 1
println(y)
