test/negative/301_unbound_var.err
301_unbound_var.fx:2:9: error: the appropriate match for 'x' of type '<unknown>' is not found.

1 errors occured during type checking.
